[C-539] Fix long name in playlist causing table misalignment (#1345)

--- a/audius-client/packages/web/src/components/tracks-table/TracksTable.module.css
+++ b/audius-client/packages/web/src/components/tracks-table/TracksTable.module.css
@@ -185,6 +185,7 @@
 :global(.colTrackName) {
   min-width: 200px !important;
   width: 350px !important;
+  max-width: 350px;
   vertical-align: bottom;
 }
 
